Fix for RTC work items  bug 375855 and bug 375688